// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> <Alert.error /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #FCEBCD;
}

<Cleaned
  bg="ui.errorBackground"
  className="c0"
  mb={3}
>
  <Box
    px={4}
  >
    <Box
      py={4}
    >
      <Box
        pr={3}
      >
        <Icon
          color="ui.error"
          name="warning"
        />
      </Box>
      <Text
        blacklist={
          Array [
            "textStyle",
            "color",
            "bg",
            "fontSize",
            "f",
            "fontWeight",
            "letterSpacing",
            "lineHeight",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "textAlign",
            "align",
            "textDecoration",
            "hidden",
          ]
        }
        hidden={false}
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Box>
</Cleaned>
`;

exports[`<Alert /> <Alert.info /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #E7F7F7;
}

<Cleaned
  bg="ui.infoBackground"
  className="c0"
  mb={3}
>
  <Box
    px={4}
  >
    <Box
      py={4}
    >
      <Box
        pr={3}
      >
        <Icon
          color="greys.charcoal"
          name="info"
        />
      </Box>
      <Text
        blacklist={
          Array [
            "textStyle",
            "color",
            "bg",
            "fontSize",
            "f",
            "fontWeight",
            "letterSpacing",
            "lineHeight",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "textAlign",
            "align",
            "textDecoration",
            "hidden",
          ]
        }
        hidden={false}
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Box>
</Cleaned>
`;

exports[`<Alert /> <Alert.success /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #DEF2DE;
}

<Cleaned
  bg="ui.successBackground"
  className="c0"
  mb={3}
>
  <Box
    px={4}
  >
    <Box
      py={4}
    >
      <Box
        pr={3}
      >
        <Icon
          color="ui.success"
          name="checkCircle"
        />
      </Box>
      <Text
        blacklist={
          Array [
            "textStyle",
            "color",
            "bg",
            "fontSize",
            "f",
            "fontWeight",
            "letterSpacing",
            "lineHeight",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "textAlign",
            "align",
            "textDecoration",
            "hidden",
          ]
        }
        hidden={false}
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Box>
</Cleaned>
`;

exports[`<Alert /> contained renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #F4F5F6;
}

<Cleaned
  bg="greys.porcelain"
  className="c0"
  mb={3}
>
  <Container
    blacklist={
      Array [
        "gutter",
        "maxWidth",
        "m",
        "mt",
        "mr",
        "mb",
        "ml",
        "mx",
        "my",
        "p",
        "pt",
        "pr",
        "pb",
        "pl",
        "px",
        "py",
      ]
    }
    gutter="default"
    maxWidth="default"
  >
    <Box
      py={4}
    >
      <Text
        blacklist={
          Array [
            "textStyle",
            "color",
            "bg",
            "fontSize",
            "f",
            "fontWeight",
            "letterSpacing",
            "lineHeight",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "textAlign",
            "align",
            "textDecoration",
            "hidden",
          ]
        }
        hidden={false}
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Container>
</Cleaned>
`;

exports[`<Alert /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #F4F5F6;
}

<Cleaned
  bg="greys.porcelain"
  className="c0"
  mb={3}
>
  <Box
    px={4}
  >
    <Box
      py={4}
    >
      <Text
        blacklist={
          Array [
            "textStyle",
            "color",
            "bg",
            "fontSize",
            "f",
            "fontWeight",
            "letterSpacing",
            "lineHeight",
            "m",
            "mt",
            "mr",
            "mb",
            "ml",
            "mx",
            "my",
            "p",
            "pt",
            "pr",
            "pb",
            "pl",
            "px",
            "py",
            "textAlign",
            "align",
            "textDecoration",
            "hidden",
          ]
        }
        hidden={false}
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Box>
</Cleaned>
`;
